--- a/KosaESS/src/main/resources/static/css/student/footer.css
+++ b/KosaESS/src/main/resources/static/css/student/footer.css
@@ -1,12 +1,12 @@
 footer {
-	background: #0E5881;
+	background: #073C5A;
 }
 
 .footerBody {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 1.5% 0;
+	padding: 1.3% 0;
 }
 
 .footerBody h2 {
@@ -15,6 +15,7 @@ footer {
 
 .footerBody ul {
 	padding: 0;
+	margin: 2% 0 0 0;
 }
 
 .footerBody li img {
@@ -76,7 +77,7 @@ footer {
 	width: 50%;
 }
 
-.footerFoot{
+.footerFoot {
 	background: #073C5A;
 	color: white;
 	padding: 0.5% 8%;
