[eunji][#update]기업 구현완료

--- a/KosaESS/src/main/resources/static/css/admin/commoncode_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/commoncode_list.css
@@ -94,6 +94,10 @@ a {
     font-weight: bold;
 }
 
+.insert div *{
+	margin-right:5px;
+}
+
 .table_wrap {
 	margin-top: 10px;
 }
@@ -135,6 +139,7 @@ a {
 }
 
 .table_wrap table tr td button {
+	background: #0E5881;
 	font-weight: bold;
 	color: white;
 	border: none;
